// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should annotate uncovered code 1`] = `
Array [
  Object {
    "annotation_level": "warning",
    "end_line": 41,
    "message": "Statement is not covered",
    "path": "src/app.js",
    "start_line": 41,
  },
  Object {
    "annotation_level": "warning",
    "end_line": 58,
    "message": "Statement is not covered",
    "path": "src/app.js",
    "start_line": 58,
  },
  Object {
    "annotation_level": "warning",
    "end_line": 2,
    "message": "Statement is not covered",
    "path": "src/uncovered.js",
    "start_line": 2,
  },
  Object {
    "annotation_level": "warning",
    "end_line": 4,
    "message": "Statement is not covered",
    "path": "src/uncovered.js",
    "start_line": 4,
  },
  Object {
    "annotation_level": "warning",
    "end_line": 6,
    "message": "Statement is not covered",
    "path": "src/uncovered.js",
    "start_line": 6,
  },
  Object {
    "annotation_level": "warning",
    "end_line": 42,
    "message": "Function “test” is not covered",
    "path": "src/app.js",
    "start_line": 40,
  },
  Object {
    "annotation_level": "warning",
    "end_line": 7,
    "message": "Function is not covered",
    "path": "src/uncovered.js",
    "start_line": 1,
  },
  Object {
    "annotation_level": "warning",
    "end_line": 59,
    "message": "Branch is not covered (if)",
    "path": "src/app.js",
    "start_line": 57,
  },
]
`;

exports[`App should leave comment when coverage is below 100% 1`] = `
Object {
  "body": "<!-- commentType: \\"coverage-report\\" -->
### 💔 Coverage report

Type | Coverage
:-|-:
Statements | 💔 \`91.99%\`
Branches | 💔 \`93.75%\`
Functions | 💔 \`76.83%\`
Lines | 💔 \`92.61%\`",
  "headers": Object {
    "accept": "application/vnd.github.machine-man-preview+json",
    "authorization": "token installation-token",
  },
  "issueNumber": "1",
  "owner": "owner",
  "repo": "repo",
}
`;

exports[`App should leave comment when coverage is below 100% 2`] = `
Object {
  "body": "<!-- commentType: \\"coverage-report\\" -->
### 💔 Coverage report

Type | Coverage
:-|-:
Statements | 💚 \`100.0%\`
Branches | 💚 \`100.0%\`
Functions | 💔 \`80.00%\`
Lines | 💔 \`95.00%\`",
  "headers": Object {
    "accept": "application/vnd.github.machine-man-preview+json",
    "authorization": "token installation-token",
  },
  "issueNumber": "1",
  "owner": "owner",
  "repo": "repo",
}
`;

exports[`App should set failed check when coverage is below 100% 1`] = `
"<!-- commentType: \\"coverage-report\\" -->
### 💔 Coverage report

Type | Coverage
:-|-:
Statements | 💔 \`91.99%\`
Branches | 💔 \`93.75%\`
Functions | 💔 \`76.83%\`
Lines | 💔 \`92.61%\`"
`;

exports[`App should set success check when coverage is 100% 1`] = `
"<!-- commentType: \\"coverage-report\\" -->
### 💚 Coverage report

Type | Coverage
:-|-:
Statements | 💚 \`100.0%\`
Branches | 💚 \`100.0%\`
Functions | 💚 \`100.0%\`
Lines | 💚 \`100.0%\`"
`;
